--- a/src/birl_demos/README
+++ b/src/birl_demos/README
@@ -1,5 +1,1 @@
-Demos created at SYSU either by students in their courses or for lab purposes will be place here. 
-
-Each demo should be contained within a folder with a descriptive name. 
-
-Please let each demo have a decriptive README file.
+Demos developed over time are placed here. Each demo will have its own descriptive ReadMe file.
